# open-green-button

./: .dockerignore  .editorconfig  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  mise.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: new-utility-request.md
.github/workflows/: client-ha-ci.yml  deploy.yml  hacs-validate.yml  release.yml  server-ci.yml
branding/: README.md
branding/web/: head-snippet.html  site.webmanifest
client-ha-integration/: hacs.json  info.md  mise.toml  pyproject.toml  requirements_test.txt
client-ha-integration/custom_components/greenbutton/: __init__.py  api.py  config_flow.py  const.py  manifest.json  strings.json
client-ha-integration/tests/: __init__.py  conftest.py  const.py  test_config_flow.py
config/: detekt.yml
docs/: architecture.md  deployment.md
docs/utilities/: burlington-hydro.md  kentucky-utilities.md
scripts/: generate-native-metadata.sh  utility-readiness-check.sh
scripts/diag/: direct_savagedata.sh  proxy_noparams.py  proxy_probe.py
server/: build.gradle.kts  fly.toml  gradle.properties  settings.gradle.kts
server/app/: build.gradle.kts
server/app/src/main/kotlin/org/opengb/: App.kt
server/app/src/main/resources/: OpenGbEcsLayout.json  application.conf  log4j2.xml  utilities.conf
server/app/src/test/kotlin/org/opengb/: AppSmokeTest.kt  OAuthFlowEndToEndTest.kt
server/core/: build.gradle.kts
server/core/src/test/resources/fixtures/burlington_hydro/: customer.xml  usage_60min.xml
server/gradle/: libs.versions.toml
(+44 files in other folders)
