[project]
# Not published to PyPI — this metadata exists only so tooling (uv, ruff, pytest) can read
# the file. The integration ships via HACS / the custom_components/greenbutton directory.
name = "greenbutton-ha-integration"
version = "0.1.0"
description = "Home Assistant integration for Open Green Button — a stateless ESPI proxy that brings utility energy data into the HA Energy dashboard."
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["build", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # assert is fine in HA integrations
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # asserts everywhere in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
